django-todo-chart/templates/k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-todo
  labels:
    app: django-todo
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: django-todo
  type: NodePort
