django-todo-chart/templates/k8s/manifest/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-todo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: django-todo.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-todo
            port:
              number: 80
